--- a/Chirp.CLI.csproj
+++ b/Chirp.CLI.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="CsvHelper" Version="33.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Include="SimpleDB\SimpleDB.csproj" />
+  </ItemGroup>
+
 </Project>
