--- a/Chirp.CLI.csproj
+++ b/Chirp.CLI.csproj
@@ -5,10 +5,15 @@
     <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    
+    <!-- Add these lines for a global tool -->
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>chirp</ToolCommandName>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.1.0" />
+    <PackageReference Include="docopt.net" Version="0.8.1" />
   </ItemGroup>
 
   <ItemGroup>
