--- a/.github/workflows/main_bdsagroup25chirpremoted.yml
+++ b/.github/workflows/main_bdsagroup25chirpremoted.yml
@@ -59,7 +59,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'bdsagroup25chirpremoted-hbhbemh9ceb7a5eq.norwayeast-01'
+          app-name: 'bdsagroup25chirpremoted-hbhbemh9ceb7a5eq'
           slot-name: 'Production'
           package: .
 
