--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -23,7 +23,7 @@ jobs:
         run: dotnet restore
 
       - name: Build with dotnet
-        run: dotnet build src/Chirp.CLI/ --configuration Release
+        run: dotnet build src/Chirp.WebService/ --configuration Release
 
       - name: dotnet publish
         run: dotnet publish src/Chirp.WebService/ -c Release -o ${{env.DOTNET_ROOT}}/myapp
