--- a/.github/workflows/main_bdsagroup25chirpremotedb.yml
+++ b/.github/workflows/main_bdsagroup25chirpremotedb.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     permissions:
       contents: read #This is required for actions/checkout
 
@@ -64,4 +64,5 @@ jobs:
           package: .
 
           
+
 
