--- a/.github/workflows/main_bdsagroup25chirpremotedb.yml
+++ b/.github/workflows/main_bdsagroup25chirpremotedb.yml
@@ -21,22 +21,22 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.x'
+          dotnet-version: '9.0.x'
 
       - name: Build with dotnet
         run: dotnet build src/Chirp.Razor/ --configuration Release
   
       - name: dotnet publish
-        run: dotnet publish src/Chirp.Razor/ -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish src/Chirp.Razor/ -c Release -o ./publish
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: published-app
+          path: ./publish
 
   deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     needs: build
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -46,7 +46,8 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
+          name: published-app
+          path: ./publish
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -61,7 +62,7 @@ jobs:
         with:
           app-name: 'bdsagroup25chirpremotedb'
           slot-name: 'Production'
-          package: .
+          package: ./publish
 
           
 
