--- a/.github/workflows/main_bdsagroup25chirpremotedb.yml
+++ b/.github/workflows/main_bdsagroup25chirpremotedb.yml
@@ -60,7 +60,7 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'bdsagroup25chirpremotedb'
+          app-name: 'bdsagroup25chirprazor3'
           slot-name: 'Production'
           package: ./publish
 
