--- a/.github/workflows/main_bdsagroup25chirpremotedb.yml
+++ b/.github/workflows/main_bdsagroup25chirpremotedb.yml
@@ -21,22 +21,22 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.0.x'
+          dotnet-version: '9.x'
 
       - name: Build with dotnet
-        run: dotnet build src/Chirp.Razor/ --configuration Release
-  
+        run: dotnet build src/Chirp.WebService/ --configuration Release
+
       - name: dotnet publish
-        run: dotnet publish src/Chirp.Razor/ -c Release -o ./publish
+        run: dotnet publish src/Chirp.WebService/ -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: published-app
-          path: ./publish
+          name: .net-app
+          path: ${{env.DOTNET_ROOT}}/myapp
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     needs: build
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -46,9 +46,8 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: published-app
-          path: ./publish
-      
+          name: .net-app
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -62,7 +61,7 @@ jobs:
         with:
           app-name: 'bdsagroup25chirprazor3'
           slot-name: 'Production'
-          package: ./publish
+          package: .
 
           
 
