--- a/.github/workflows/main_bdsagroup25chirprazor3.yml
+++ b/.github/workflows/main_bdsagroup25chirprazor3.yml
@@ -21,19 +21,19 @@ jobs:
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '9.x'
+          dotnet-version: '9.0.x'
 
       - name: Build with dotnet
-        run: dotnet build src/Chirp.razor/Cheepservice.cs/ --configuration Release
+        run: dotnet build src/Chirp.Razor/Chirp.Razor.csproj -c Release
 
       - name: dotnet publish
-        run: dotnet publish src/Chirp.razor/Cheepservice.cs/ -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish src/Chirp.Razor/Chirp.Razor.csproj -c Release -o ./publish
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: published-app
+          path: ./publish
 
   deploy:
     runs-on: ubuntu-latest
@@ -46,7 +46,8 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
+          name: published-app
+          path: ./publish
       
       - name: Login to Azure
         uses: azure/login@v2
@@ -61,5 +62,5 @@ jobs:
         with:
           app-name: 'bdsagroup25chirprazor3'
           slot-name: 'Production'
-          package: .
-          
+          package: ./publish
+         
