--- a/.github/workflows/main_bdsagroup25chirprazor3.yml
+++ b/.github/workflows/main_bdsagroup25chirprazor3.yml
@@ -1,7 +1,7 @@
 ﻿# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy ASP.Net Core app to Azure Web App - bdsagroup25chirprazor3
+name: Build, Test and deploy ASP.Net Core app to Azure Web App - bdsagroup25chirprazor3
 
 on:
   push:
@@ -22,10 +22,19 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.0.x'
+          
+      - name: Restore dependencies
+        run: dotnet restore src/Chirp.Razor/Chirp.Razor.csproj
 
+      /Dotnet build
       - name: Build with dotnet
         run: dotnet build src/Chirp.Razor/Chirp.Razor.csproj -c Release
-
+        
+        //Unit tests
+      - name: Run unit tests
+        run: dotnet test test/Chirp.Razor.Tests/Chirp.Razor.Tests.csproj --configuration Release --no-build --verbosity normal
+    
+      //Dotnet publish
       - name: dotnet publish
         run: dotnet publish src/Chirp.Razor/Chirp.Razor.csproj -c Release -o ./publish
 
