Updating yml to work with new architecture

--- a/.github/workflows/main_bdsagroup25chirprazor3.yml
+++ b/.github/workflows/main_bdsagroup25chirprazor3.yml
@@ -27,13 +27,13 @@ jobs:
         run: dotnet restore src/Chirp.Web/Chirp.Web.csproj
 
       - name: Build with dotnet
-        run: dotnet build src/Chirp.Razor/Chirp.Razor.csproj -c Release
+        run: dotnet build src/Chirp.Web/Chirp.Web.csproj -c Release
         
       - name: Run unit tests
         run: dotnet test test/Chirp.Razor.Tests/Chirp.Razor.Tests.csproj --configuration Release --no-build --verbosity normal
     
       - name: dotnet publish
-        run: dotnet publish src/Chirp.Razor/Chirp.Razor.csproj -c Release -o ./publish
+        run: dotnet publish src/Chirp.Web/Chirp.Web.csproj -c Release -o ./publish
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
