--- a/.github/workflows/main_bdsagroup25chirprazor3.yml
+++ b/.github/workflows/main_bdsagroup25chirprazor3.yml
@@ -13,7 +13,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read # This is required for actions/checkout
 
     steps:
       - uses: actions/checkout@v4
@@ -22,16 +22,23 @@ jobs:
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.0.x'
-          
+
       - name: Restore dependencies
         run: dotnet restore src/Chirp.Core/Chirp.Core.csproj
 
       - name: Build with dotnet
         run: dotnet build src/Chirp.Core/Chirp.Core.csproj -c Release
-        
+
       - name: Run unit tests
         run: dotnet test test/Chirp.Razor.Tests/Chirp.Razor.Tests.csproj --configuration Release --no-build --verbosity normal
-    
+
+      # GitHub OAuth test
+      - name: Test GitHub OAuth authentication
+        run: |
+          export GitHub__ClientId="${{ secrets.GITHUBCLIENTID }}"
+          export GitHub__ClientSecret="${{ secrets.GITHUBCLIENTSECRET }}"
+          dotnet test --no-build --verbosity normal
+
       - name: dotnet publish
         run: dotnet publish src/Chirp.Core/Chirp.Core.csproj -c Release -o ./publish
 
@@ -45,8 +52,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
+      id-token: write # This is required for requesting the JWT
+      contents: read # This is required for actions/checkout
 
     steps:
       - name: Download artifact from build job
@@ -54,7 +61,7 @@ jobs:
         with:
           name: published-app
           path: ./publish
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
