Possible fix for ui deployment not showing on azure
ui elements and razor pages only being shown locally but not on deployment, so this should ensure its published for deployment

--- a/src/Chirp.Web/Chirp.Web.csproj
+++ b/src/Chirp.Web/Chirp.Web.csproj
@@ -41,5 +41,10 @@
         <DependentUpon>Login.cshtml</DependentUpon>
       </Compile>
     </ItemGroup>
+
+    <ItemGroup>
+        <Content Update="Areas\**\*.cshtml" CopyToPublishDirectory="PreserveNewest"/>
+        <Content Update="Pages\**\*.cshtml" CopyToPublishDirectory="PreserveNewest"/>
+    </ItemGroup>
     
 </Project>
