--- a/.github/workflows/main_bdsagroup25chirprazor3.yml
+++ b/.github/workflows/main_bdsagroup25chirprazor3.yml
@@ -1,7 +1,4 @@
-﻿# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build, Test and deploy ASP.Net Core app to Azure Web App - bdsagroup25chirprazor3
+﻿name: Build, Test, and Deploy Chirp Web App to Azure
 
 on:
   push:
@@ -13,36 +10,42 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read # This is required for actions/checkout
+      contents: read
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Set up .NET Core
+      - name: Set up .NET 9.0
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.0.x'
 
+      # Restore all dependencies in the solution
       - name: Restore dependencies
-        run: dotnet restore src/Chirp.Core/Chirp.Core.csproj
+        run: dotnet restore Chirp.CLI.sln
 
-      - name: Build with dotnet
-        run: dotnet build src/Chirp.Core/Chirp.Core.csproj -c Release
+      # Build everything (Core, Infrastructure, Web)
+      - name: Build solution
+        run: dotnet build Chirp.CLI.sln -c Release --no-restore
 
+      # Run unit tests
       - name: Run unit tests
         run: dotnet test test/Chirp.Razor.Tests/Chirp.Razor.Tests.csproj --configuration Release --no-build --verbosity normal
 
-      # GitHub OAuth test
+      # GitHub OAuth authentication test
       - name: Test GitHub OAuth authentication
         run: |
           export GitHub__ClientId="${{ secrets.GITHUBCLIENTID }}"
           export GitHub__ClientSecret="${{ secrets.GITHUBCLIENTSECRET }}"
-          dotnet test --no-build --verbosity normal
+          dotnet test test/Chirp.Razor.Tests/Chirp.Razor.Tests.csproj --configuration Release --no-build
 
-      - name: dotnet publish
-        run: dotnet publish src/Chirp.Core/Chirp.Core.csproj -c Release -o ./publish
+      # Publish the Web project
+      - name: Publish Chirp Web App
+        run: dotnet publish src/Chirp.Web/Chirp.Web.csproj -c Release -o ./publish
 
-      - name: Upload artifact for deployment job
+      # Upload artifact to pass to deploy job
+      - name: Upload publish artifact
         uses: actions/upload-artifact@v4
         with:
           name: published-app
@@ -52,11 +55,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     permissions:
-      id-token: write # This is required for requesting the JWT
-      contents: read # This is required for actions/checkout
+      id-token: write
+      contents: read
 
     steps:
-      - name: Download artifact from build job
+      - name: Download published artifact
         uses: actions/download-artifact@v4
         with:
           name: published-app
@@ -70,7 +73,6 @@ jobs:
           subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_50044BCCDAB24CCA8D3BC4D7D8901243 }}
 
       - name: Deploy to Azure Web App
-        id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'bdsagroup25chirprazor3'
