--- a/src/Chirp.Web/Chirp.Web.csproj
+++ b/src/Chirp.Web/Chirp.Web.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net$(NETCoreAppMaximumVersion)</TargetFramework>
+        <TargetFramework>net9.0</TargetFramework>
         <Nullable>enable</Nullable>
         <ImplicitUsings>enable</ImplicitUsings>
-      <UserSecretsId>f8e1144c-dc67-4dab-876e-2b934fb682f1</UserSecretsId>
-  </PropertyGroup>
+        <UserSecretsId>f8e1144c-dc67-4dab-876e-2b934fb682f1</UserSecretsId>
+    </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="AspNet.Security.OAuth.GitHub" Version="9.4.1" />
