Removed chirp UI test

--- a/test/Chirp.Tests/Chirp.Tests.csproj
+++ b/test/Chirp.Tests/Chirp.Tests.csproj
@@ -8,13 +8,11 @@
         <PreserveCompilationContext>false</PreserveCompilationContext>
         <CopyLocalLockFileAssemblies>false</CopyLocalLockFileAssemblies>
         <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
-        <RootNamespace>Chirp.Razor.Tests</RootNamespace>
+        <RootNamespace>Chirp.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="coverlet.collector" Version="6.0.2" />
-        <PackageReference Include="Microsoft.Playwright" Version="1.43.0" />
-        <PackageReference Include="Microsoft.Playwright.NUnit" Version="1.43.0" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="9.0.0" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.9" />
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
