--- a/.github/workflows/main_bdsagroup25chirprazor3.yml
+++ b/.github/workflows/main_bdsagroup25chirprazor3.yml
@@ -29,16 +29,18 @@ jobs:
       - name: Build solution
         run: dotnet build Chirp.CLI.sln -c Release --no-restore
 
-      # Run unit tests -out commenting until unit tests are fixed
-        #- name: Run unit tests
-        #run: dotnet test test/Chirp.Razor.Tests/Chirp.Razor.Tests.csproj --configuration Release --no-build --verbosity normal
+      # Run unit tests
+      - name: Run tests
+        env:
+          GitHub__ClientId: ${{ secrets.GITHUBCLIENTID }}
+          GitHub__ClientSecret: ${{ secrets.GITHUBCLIENTSECRET }}
+        run: dotnet test Chirp.CLI.sln --configuration Release --no-build
 
       # GitHub OAuth authentication test
       - name: Test GitHub OAuth authentication
         run: |
           export GitHub__ClientId="${{ secrets.GITHUBCLIENTID }}"
           export GitHub__ClientSecret="${{ secrets.GITHUBCLIENTSECRET }}"
-          dotnet test test/Chirp.Razor.Tests/Chirp.Razor.Tests.csproj --configuration Release --no-build
 
       # Publish the Web project
       - name: Publish Chirp Web App
