Revert "updated playwright and removed build"
This reverts commit 23701a09cd32195924f5914cb7d1153db0b771e5.

--- a/.github/workflows/main_bdsagroup25chirprazor3.yml
+++ b/.github/workflows/main_bdsagroup25chirprazor3.yml
@@ -35,7 +35,7 @@ jobs:
         
       # Run Playwright tests
       - name: Run Playwright tests
-        run: dotnet test test/PlaywrightTests/PlaywrightTests.csproj -c Release --verbosity normal
+        run: dotnet test test/PlaywrightTests/PlaywrightTests.csproj -c Release --no-build --verbosity normal
 
       # GitHub OAuth authentication test
       - name: Test GitHub OAuth authentication
