Apply EF migration for DisplayName column
EF migration to persist ApplicationUser.DisplayName

--- a/src/Chirp.Web/appsettings.json
+++ b/src/Chirp.Web/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Cheep.db"
+    "DefaultConnection": "Data Source=Cheep.db",
+    "ChirpDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Chirp.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
