--- a/src/Chirp.Web/Chirp.Web.csproj
+++ b/src/Chirp.Web/Chirp.Web.csproj
@@ -12,16 +12,17 @@
         <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.10" />
         <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="9.0.10" />
         <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.9" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.10" />
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.10">
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.11">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.10" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.11" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.10">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="9.0.10" />
         <PackageReference Include="System.Data.SQLite" Version="2.0.2" />
     </ItemGroup>
 
@@ -43,8 +44,12 @@
     </ItemGroup>
 
     <ItemGroup>
-        <Content Update="Areas\**\*.cshtml" CopyToPublishDirectory="PreserveNewest"/>
-        <Content Update="Pages\**\*.cshtml" CopyToPublishDirectory="PreserveNewest"/>
+        <Content Update="Areas\**\*.cshtml" CopyToPublishDirectory="PreserveNewest" />
+        <Content Update="Pages\**\*.cshtml" CopyToPublishDirectory="PreserveNewest" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Areas\Identity\Data\" />
     </ItemGroup>
     
 </Project>
