Removed a redunnt line

--- a/src/Chirp.Web/appsettings.json
+++ b/src/Chirp.Web/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Cheep.db",
-    "ChirpDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=Chirp.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=Cheep.db"
   },
   "AllowedHosts": "*"
 }
